fixed overflow lol

--- a/index.css
+++ b/index.css
@@ -7,5 +7,5 @@
 }
 
 .card{
-    overflow: hidden;
+    /* overflow: hidden; */
 }
